# mr-market

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DEMO_PLAN.md  Dockerfile  Makefile  PHASE_1_PLAN.md  README.md  docker-compose.yml  pyproject.toml
alembic/: alembic.ini  env.py
app/: config.py  main.py
app/analytics/: backtest.py  levels.py  portfolio.py  screener.py  sentiment.py  technicals.py  ticker_ner.py
app/api/: auth.py  backtest.py  chat.py  chats.py  deals.py  deps.py  health.py  holding.py  levels.py  news.py  portfolio.py  quote.py  research.py  screener.py  technicals.py  users.py  watchlist.py
app/contracts/: phase3.md
app/data/: cache.py  info_service.py  market_hours.py  news_service.py  portfolio_import.py  quote_service.py  triangulate.py  types.py
app/db/: session.py
app/llm/: auth.py  codex_client.py  context.py  guardrails.py  intent.py  memory.py  orchestrator.py  prompts.py  tool_routing.py  tools.py
app/rag/: chunking.py  embeddings.py  retrieval.py  vector_store.py
app/security/: __init__.py  hash.py  tokens.py
app/workers/: arq_settings.py  (+6 more)
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: __init__.py  config.py  main.py
apps/api/app/analytics/: __init__.py  cross_validation.py  fundamentals.py  sentiment.py  support_resistance.py  technicals.py
apps/api/app/api/: __init__.py  deps.py
apps/api/app/api/routes/: __init__.py  analyze.py  chat.py  health.py  portfolio.py
apps/api/app/cache/: __init__.py  redis.py
apps/api/app/core/: __init__.py  exceptions.py  middleware.py  security.py
apps/api/app/rag/: __init__.py  ingestion.py  search.py
apps/api/app/services/: __init__.py  compliance.py  context_builder.py  intent_router.py  llm_orchestrator.py  prompt_templates.py  verification.py
apps/api/app/tests/: __init__.py
apps/api/app/tools/: __init__.py  base.py  concall_rag.py  fundamentals.py  holding.py  news.py  price.py  risk_profile.py  screener.py  technicals.py
data/: nifty100.csv  nifty50.csv
docker/: api-entrypoint.sh
docs/: API.md  ARCHITECTURE.md  COMPLIANCE.md
infra/: docker-compose.dev.yml  docker-compose.yml
migrations/: env.py
next-app/: pnpm-lock.yaml
scripts/: backfill_eod.py  backfill_holdings.py  compute_technicals.py  eval_run.py  ingest_annual_reports.py  ingest_deals.py  ingest_research.py  run_nightly_refresh.py  seed_universe.py  test_scrapers.py  test_sources.py
tests/: golden_queries.yaml  test_backtest.py  test_context.py  test_guardrails.py  test_holdings_ingest.py  test_levels.py  test_memory_service.py  test_nse_archive.py  test_nse_deals.py  test_nse_pledge.py  test_nse_shareholding.py  test_openai_codex_auth.py  test_phase3_b1.py  test_phase3_b2.py  test_phase3_b3.py  test_phase3_stubs.py  test_portfolio_analytics.py  test_portfolio_api.py  test_portfolio_import.py  test_rag.py  test_research_upload.py  test_screener.py  test_screener_db.py  test_screener_stored.py  test_security_hash.py  test_security_tokens.py  test_sentiment.py  test_technicals.py  test_ticker_ner.py  test_tool_routing.py  test_triangulate.py  test_universe_seed.py  test_vector_store.py  test_watchlist.py
workers/: Dockerfile  pyproject.toml
workers/app/: __init__.py  celery_app.py
workers/app/pipelines/: __init__.py  data_ingestion.py  sentiment.py  technicals_compute.py
workers/app/scrapers/: __init__.py  base.py  bse_scraper.py  moneycontrol_scraper.py  nse_scraper.py  pledge_scraper.py  pulse_scraper.py  rss_scraper.py  screener_scraper.py  yfinance_scraper.py
workers/app/tasks/: __init__.py  news_fetch.py  nightly_refresh.py  price_streaming.py
workers/tests/: __init__.py
(+110 files in other folders)
