[project]
name = "mr-market"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.100.0",
    "arq>=0.28.0",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.3",
    "curl-cffi>=0.15.0",
    "fastapi>=0.136.1",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "pydantic>=2",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "redis[hiredis]>=5.3.1",
    "sqlalchemy[asyncio]>=2.0",
    "sse-starlette>=3.4.2",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "mypy>=2.0.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]
