[project]
name = "mr-market-workers"
version = "0.1.0"
description = "Mr. Market background workers and scrapers"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.4",
    "redis>=5.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "nselib>=4.0",
    "jugaad-data>=0.25",
    "yfinance>=0.2",
    "feedparser>=6.0",
    "pandas>=2.2",
    "pandas-ta>=0.3",
    "numpy>=2.0",
    "transformers>=4.40",
    "torch>=2.2",
    "pymupdf>=1.24",
    "mr-market-shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
