[project]
name = "mr-market-api"
version = "0.1.0"
description = "Mr. Market FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "websockets>=13.0",
    "httpx>=0.27",
    "openai>=1.50",
    "google-genai>=1.0",
    "pandas>=2.2",
    "pandas-ta>=0.3",
    "numpy>=2.0",
    "qdrant-client>=1.12",
    "mr-market-shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
